# brouxai

./: CLAUDE.md  docker-compose.yml  report_demo.html  report_produits.html
.claude/: settings.local.json
backend/: .env.exemple  api.http  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base_agent.py  data_agent.py  insight_agent.py  layout_agent.py  metadata_agent.py  qa_agent.py  schema_linking_agent.py  storytelling_agent.py  viz_agent.py
backend/app/api/v1/: hitl.py  reports.py
backend/app/models/: report.py
backend/app/pipeline/: checkpoints.py  graph.py  router.py  state.py
backend/app/services/: cache.py  llm.py  notification.py  report_store.py  storage.py
backend/app/templates/: report.html.j2
backend/tests/api/: test_health.py  test_hitl_api.py  test_reports_api.py
backend/tests/fixtures/: budget.csv  clients.csv  clients_multi.csv  sample_clients.csv  sample_multi.py  sample_ventes.csv  sample_ventes.xlsx  transactions.csv  ventes.csv
backend/tests/integration/: test_full_pipeline.py  test_hitl_flow.py  test_pipeline_skeleton.py
backend/tests/unit/: test_data_agent.py  test_insight_agent.py  test_layout_agent.py  test_metadata_agent.py  test_qa_agent.py  test_schema_linking_agent.py  test_storytelling_agent.py  test_viz_agent.py
